--- a/IT2/Quiz_Prosjekt/quiz.css
+++ b/IT2/Quiz_Prosjekt/quiz.css
@@ -3,7 +3,8 @@ body {
     color: white;
 }
 h1 {
-    Margin-left: 10px
+    Margin-left: 10px;
+    color: black;
 }
 
 
@@ -11,25 +12,34 @@ h1 {
 #quiz {
     margin-left: 10px;
     background: black;
-    padding: 10px 20px 10px 20px;
+    padding: 5px 20px 10px 20px;
     width: 400px;
     border-radius: 20px;
     float: left;
+}
+
+#quiz2 {
+
 
 }
 
 input {
     margin-bottom: 20px;
-    display: block;
+    display: table-column;
 }
 
 #tekstboks {
     height: 25px;
+    width: 300px;
     font-size: 16px;
     border-radius: 5px;
     border: none;
     padding-left: 5px;
 }
+#tekstboks2 {
+    width: 300px;
+}
+
 
 
 #button {
@@ -39,7 +49,7 @@ input {
     padding: 10px;
     color: black;
     font-size: 16px;
-    transition-duration: .5s;
+    transition-duration: .25s;
     margin-top: 15px;
 }
 
@@ -57,9 +67,9 @@ input {
     visibility: hidden;
     background: crimson;
     padding: 10px 20px 10px 20px;
-    width: 400px;
+    width: 375px;
     border-radius: 20px;
-    float: left;
+    float: right;
     margin-left: 20px;
     font-size: 30px;
 
